# Nakamoto-Lite

./: .gitignore  Cargo.toml  Cargo.toml~  README.md  ai_agent.py  ai_agent.py~  build.rs  directory structure  http_ai_agent.py  nakamoto-lite.html  nakamoto-lite.html~
proto/: nakamoto.proto
src/: main.rs  main.rs~
