[package]
name = "nakamoto-lite-server"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4"
sha2 = "0.10"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] } # UPGRADED BACK
tonic = "0.12"
prost = "0.13"
ldk-node = "0.7"                                     # UPGRADED
lazy_static = "1.4"

[build-dependencies]
tonic-build = "0.12"